--- a/app/src/main/res/layout/activity_loginscreen.xml
+++ b/app/src/main/res/layout/activity_loginscreen.xml
@@ -19,12 +19,11 @@
         app:layout_constraintVertical_bias="0.074"
         app:srcCompat="@drawable/fotalert" />
 
-    <!-- Updated Username Field -->
+    <!--  Username Field updated to height=60dp -->
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/usernameLayout"
         android:layout_width="350dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="0dp"
+        android:layout_height="60dp"
         app:boxBackgroundMode="filled"
         app:boxBackgroundColor="#FFFFFF"
         app:boxStrokeColor="#6200EE"
@@ -38,7 +37,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etUsername"
             android:layout_width="match_parent"
-            android:layout_height="48dp"
+            android:layout_height="match_parent"
             android:hint="Username"
             android:textSize="16sp"
             android:textColorHint="#6F6A6A"
@@ -46,15 +45,17 @@
             android:paddingEnd="16dp" />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <!-- Updated Password Field -->
+    <!--  Password Field updated to height=60dp and correct toggle -->
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/passwordLayout"
         android:layout_width="350dp"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         app:boxBackgroundMode="filled"
         app:boxBackgroundColor="#FFFFFF"
         app:boxStrokeColor="#6200EE"
         app:boxStrokeWidthFocused="2dp"
+        app:endIconMode="password_toggle"
+        app:endIconTint="#6F6A6A"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintVertical_bias="0.647"
@@ -64,13 +65,13 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etPassword"
             android:layout_width="match_parent"
-            android:layout_height="48dp"
+            android:layout_height="match_parent"
             android:hint="Password"
             android:textSize="16sp"
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
             android:textColorHint="#6F6A6A"
-            android:inputType="textPassword" />
+            android:inputType="text" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
@@ -114,18 +115,5 @@
         app:layout_constraintStart_toStartOf="@+id/textView"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.814" />
-
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:contentDescription="@null"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.88"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.646"
-        app:srcCompat="@drawable/eye" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
